# cfl

./: CMakeLists.txt  README.md
.github/workflows/: build.yaml  lint.yaml  packages.yaml
include/: CMakeLists.txt
include/cfl/: cfl.h  cfl_array.h  cfl_hash.h  cfl_kvlist.h  cfl_list.h  cfl_sds.h  cfl_utils.h  cfl_variant.h
src/: CMakeLists.txt  cfl_array.c  cfl_container.c  cfl_kvlist.c  cfl_object.c  cfl_sds.c  cfl_utils.c  cfl_variant.c
tests/: CMakeLists.txt  array.c  atomic_operations.c  kvlist.c  list.c  object.c  sds.c  variant.c
